tests/org.eclipse.php.core.tests/src/org/eclipse/php/core/tests/errors/PHP74ErrorReportingTests#PHP74ErrorReportingTests(String[]).mjava
	public PHP74ErrorReportingTests(String[] fileNames) {
		super(fileNames);
	}

